<resources>
    <string name="app_name">NavigateActivityTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_drawable_profile">Profile</string>
    <string name="nav_drawable_dashboard">DashBoard</string>
    <string name="nav_drawable_exercise">Exercise</string>
    <string name="nav_drawable_diet">Diet</string>
    <string name="nav_drawable_setting">Setting</string>
    <string name="signup">회원가입</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
