<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_drawable_profile" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_drawable_dashboard" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_drawable_exercise" />
        <item
            android:id="@+id/nav_diet"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_drawable_diet" />
        <item
            android:id="@+id/nav_sign_up"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/signup" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_drawable_setting" />
        </menu>
    </item>

</menu>
